--- a/study-core/pom.xml
+++ b/study-core/pom.xml
@@ -10,7 +10,7 @@
 
 	<name>${project.artifactId}</name>
 	<url>http://maven.apache.org</url>
-	
+
 	<parent>
 		<groupId>com.study.demo</groupId>
 		<artifactId>study-demo</artifactId>
@@ -18,6 +18,14 @@
 	</parent>
 
 	<dependencies>
+
+		<!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>1.7.25</version>
+		</dependency>
+
 		<!-- 通用工具包 -->
 		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
 		<dependency>
@@ -32,11 +40,13 @@
 			<artifactId>commons-io</artifactId>
 			<version>2.6</version>
 		</dependency>
-	
+
+
+
 	</dependencies>
 
 	<build>
-		
+
 	</build>
 
 	<modules>
