学习文档加入

--- a/study-core/study-netty/pom.xml
+++ b/study-core/study-netty/pom.xml
@@ -16,15 +16,27 @@
 	<url>http://maven.apache.org</url>
 
 	<dependencies>
-		
-		
+
+
 		<dependency>
 			<groupId>com.study.demo</groupId>
 			<artifactId>study-common</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/io.netty/netty-all -->
+		<dependency>
+			<groupId>io.netty</groupId>
+			<artifactId>netty-all</artifactId>
+			<version>4.1.25.Final</version>
+		</dependency>
 
-
+		<!-- https://mvnrepository.com/artifact/ch.qos.logback/logback-classic -->
+		<dependency>
+		    <groupId>ch.qos.logback</groupId>
+		    <artifactId>logback-classic</artifactId>
+		    <version>1.2.3</version>
+		</dependency>
+		
 	</dependencies>
 
 	<build>
