--- a/study-core/pom.xml
+++ b/study-core/pom.xml
@@ -52,6 +52,7 @@
 	</build>
 
 	<modules>
+		<module>study-concurrent</module>
 		<module>study-netty</module>
 		<module>study-mqtt</module>
 		<module>study-common</module>
