--- a/study-web/web-template/web-template-api/src/main/resources/application.properties
+++ b/study-web/web-template/web-template-api/src/main/resources/application.properties
@@ -6,8 +6,8 @@ spring.profiles.active=@spring.profiles.active@
 
 spring.config.location = classpath:/druid.properties
 
-#mybatis 扫描xml文件配置
-mybatis.mapperLocations=classpath:/mapper/*.xml
+#mybatis 扫描xml文件配置 classpath*加* 说明包含jar包中指定位置的配置
+mybatis.mapperLocations=classpath*:/mapper/*.xml
 
 # pagehelper 分页插件配置
 pagehelper.helperDialect=mysql
