--- a/study-web-2.0/web-template-2.0-demo/pom.xml
+++ b/study-web-2.0/web-template-2.0-demo/pom.xml
@@ -19,6 +19,12 @@
 
 	<dependencies>
 
+		<!-- https://mvnrepository.com/artifact/com.maihaoche/spring-boot-starter-rocketmq -->
+		<dependency>
+			<groupId>com.maihaoche</groupId>
+			<artifactId>spring-boot-starter-rocketmq</artifactId>
+			<version>0.1.0</version>
+		</dependency>
 
 	</dependencies>
 
