--- a/study-web/web-template/web-template-api/src/main/resources/application.properties
+++ b/study-web/web-template/web-template-api/src/main/resources/application.properties
@@ -1,5 +1,9 @@
-server.port=9000
+server.port=19001
 server.context-path=/web
+
+#服务注册
+#eureka.client.serviceUrl.defaultZone=http://localhost:18000/eureka/
+eureka.instance.leaseRenewalIntervalInSeconds=@eureka.instance.leaseRenewalIntervalInSeconds@
 
 #环境配置
 spring.profiles.active=@spring.profiles.active@
