--- a/study-web/web-template/web-template-api/src/main/resources/bootstrap.properties
+++ b/study-web/web-template/web-template-api/src/main/resources/bootstrap.properties
@@ -1,8 +1,25 @@
-#启动属性文件
-
+#本地属性文件
 spring.config.name=application,druid
-#使用远程属性配置
-#spring.cloud.config.profile=dev
-#spring.cloud.config.uri=http://127.0.0.1:7001/
+
+
+#远程属性配置
+#服务中心的地址（不灵活）
+#spring.cloud.config.uri=http://localhost:18002/
+#注册中心地址（集群逗号隔开）
+eureka.client.serviceUrl.defaultZone=http://localhost:18000/eureka/
+#开启配置服务发现
+spring.cloud.config.discovery.enabled=true
+#配置服务实例名称
+spring.cloud.config.discovery.service-id=config-server
+
+#对应前配置文件中的{application}部分
+spring.application.name=api-template
+#对应前配置文件中的{profile}部分
+spring.cloud.config.profile=dev
+#对应前配置文件的git分支，也可以是本地文件夹
+spring.cloud.config.label=core
+
+
+
 
 
