--- a/study-web/web-template/web-template-api/pom.xml
+++ b/study-web/web-template/web-template-api/pom.xml
@@ -15,7 +15,12 @@
 	<url>http://maven.apache.org</url>
 
 	<dependencies>
-		
+
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-eureka</artifactId>
+		</dependency>
+
 		<dependency>
 			<groupId>com.study.demo</groupId>
 			<artifactId>web-template-service</artifactId>
@@ -30,6 +35,26 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<version>5.1.46</version><!--$NO-MVN-MAN-VER$ -->
 		</dependency>
+
+		<!-- 第三方starter -->
+		<dependency>
+			<groupId>org.mybatis.spring.boot</groupId>
+			<artifactId>mybatis-spring-boot-starter</artifactId>
+			<version>1.3.2</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>druid-spring-boot-starter</artifactId>
+			<version>1.1.7</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.github.pagehelper</groupId>
+			<artifactId>pagehelper-spring-boot-starter</artifactId>
+			<version>1.2.2</version>
+		</dependency>
+
 
 
 		<!-- https://mvnrepository.com/artifact/io.springfox/springfox-swagger2 -->
@@ -70,7 +95,7 @@
 			</resource>
 		</resources>
 		<plugins>
-		
+
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
