--- a/study-web/web-template/web-template-api/src/main/resources/config-env-dev.properties
+++ b/study-web/web-template/web-template-api/src/main/resources/config-env-dev.properties
@@ -1,9 +1,13 @@
 spring.profiles.active=dev
 
+
+eureka.client.serviceUrl.defaultZone=http://localhost:18000/eureka/
+eureka.instance.leaseRenewalIntervalInSeconds=5
+
 #数据源配置
-spring.datasource.url=jdbc:mysql://192.168.1.190:3306/study?useUnicode=true&characterEncoding=UTF-8
+spring.datasource.url=jdbc:mysql://47.254.75.197:3306/study?useUnicode=true&characterEncoding=utf8&allowMultiQueries=true&zeroDateTimeBehavior=convertToNull&autoReconnect=true
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=cjj1!ECS
 
 
 #druid数据源后台监控登录查看
