--- a/study-web/web-template/web-template-api/src/main/resources/config-env-product.properties
+++ b/study-web/web-template/web-template-api/src/main/resources/config-env-product.properties
@@ -1,5 +1,10 @@
 spring.profiles.active=product
 
+
+#
+eureka.client.serviceUrl.defaultZone=http://localhost:18000/eureka/
+eureka.instance.leaseRenewalIntervalInSeconds=30
+
 #数据源配置
 spring.datasource.url=
 spring.datasource.username=
