--- a/study-web/web-template/web-template-api/src/main/resources/config-env-test.properties
+++ b/study-web/web-template/web-template-api/src/main/resources/config-env-test.properties
@@ -1,5 +1,9 @@
 spring.profiles.active=test
 
+#
+eureka.client.serviceUrl.defaultZone=http://localhost:18000/eureka/
+eureka.instance.leaseRenewalIntervalInSeconds=5
+
 #数据源配置
 spring.datasource.url=
 spring.datasource.username=
