--- a/study-web/web-template/web-template-common/pom.xml
+++ b/study-web/web-template/web-template-common/pom.xml
@@ -23,9 +23,15 @@
 			<artifactId>swagger-annotations</artifactId>
 			<version>1.5.14</version>
 		</dependency>
-
-
-
+		
+		<!-- https://mvnrepository.com/artifact/org.springframework/spring-web -->
+		<dependency>
+		    <groupId>org.springframework</groupId>
+		    <artifactId>spring-web</artifactId>
+		    <version>4.3.8.RELEASE</version>
+		</dependency>
+				
+		
 	</dependencies>
 
 	<build>
