--- a/study-web/web-config/src/main/resources/application.properties
+++ b/study-web/web-config/src/main/resources/application.properties
@@ -3,8 +3,17 @@ spring.application.name=config-server
 server.port=18002
 
 spring.profiles.active=native
-eureka.client.serviceUrl.defaultZone=http://localhost:18000/eureka/
+#本地文件方式
+#spring.cloud.config.server.native.searchLocations: E:/conf
 
+#注册中心地址
+eureka.client.serviceUrl.defaultZone=@eureka.client.serviceUrl.defaultZone@
+# 心跳时间，即服务续约间隔时间（缺省为30s）
+eureka.instance.lease-renewal-interval-in-seconds=5 
+# 发呆时间，即服务续约到期时间（缺省为90s）
+eureka.instance.lease-expiration-duration-in-seconds=10
+# 开启健康检查（依赖spring-boot-starter-actuator）
+eureka.client.healthcheck.enabled=true                     
 
 
 
