--- a/study-web/web-cloud/pom.xml
+++ b/study-web/web-cloud/pom.xml
@@ -5,77 +5,46 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>com.study.demo</groupId>
-		<artifactId>web-template</artifactId>
+		<artifactId>study-web</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
 
-	<artifactId>web-template-api</artifactId>
+	<artifactId>web-cloud</artifactId>
 	<packaging>jar</packaging>
 	<name>${project.artifactId}</name>
 	<url>http://maven.apache.org</url>
 
 	<dependencies>
 
-		<!-- 发现注册服务 -->
+		<!-- 注册中心 -->
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-eureka-server</artifactId>
+		</dependency>
+
+		<!-- 服务监控 -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+
+		<!-- 配置中心 -->
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-config-server</artifactId>
+		</dependency>
+
+		<!-- 安全认证 -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+
+		<!-- 注册中心客户端 -->
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-eureka</artifactId>
 		</dependency>
-		
-		<!-- 服务监控 -->
-		<dependency>
-		    <groupId>org.springframework.boot</groupId>
-		    <artifactId>spring-boot-starter-actuator</artifactId>
-		</dependency>
-
-		<dependency>
-			<groupId>com.study.demo</groupId>
-			<artifactId>web-template-service</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
-		</dependency>
-
-
-		<!-- MySQL 连接驱动依赖 -->
-		<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
-		<dependency>
-			<groupId>mysql</groupId>
-			<artifactId>mysql-connector-java</artifactId>
-			<version>5.1.46</version><!--$NO-MVN-MAN-VER$ -->
-		</dependency>
-
-		<!-- 第三方starter -->
-		<dependency>
-			<groupId>org.mybatis.spring.boot</groupId>
-			<artifactId>mybatis-spring-boot-starter</artifactId>
-			<version>1.3.2</version>
-		</dependency>
-
-		<dependency>
-			<groupId>com.alibaba</groupId>
-			<artifactId>druid-spring-boot-starter</artifactId>
-			<version>1.1.7</version>
-		</dependency>
-
-		<dependency>
-			<groupId>com.github.pagehelper</groupId>
-			<artifactId>pagehelper-spring-boot-starter</artifactId>
-			<version>1.2.2</version>
-		</dependency>
-
-
-
-		<!-- https://mvnrepository.com/artifact/io.springfox/springfox-swagger2 -->
-		<dependency>
-			<groupId>io.springfox</groupId>
-			<artifactId>springfox-swagger2</artifactId>
-			<version>2.8.0</version>
-		</dependency>
-		<dependency>
-			<groupId>io.springfox</groupId>
-			<artifactId>springfox-swagger-ui</artifactId>
-			<version>2.8.0</version>
-		</dependency>
-
 	</dependencies>
 
 	<build>
@@ -85,18 +54,19 @@
 			<resource>
 				<directory>src/main/resources</directory>
 				<excludes>
-					<exclude>config-env*.properties</exclude>
+					<exclude>**/config-env*.properties</exclude>
 				</excludes>
 			</resource>
 			<!-- 设置对auto-config.properties，jdbc.properties进行过虑，即这些文件中的${key}会被替换掉为真正的值 -->
 			<resource>
 				<directory>src/main/resources</directory>
 				<includes>
-					<include>*.properties</include>
-					<include>*.xml</include>
+					<include>**/*.properties</include>
+					<include>**/*.xml</include>
 				</includes>
 				<excludes>
-					<exclude>config-env*.properties</exclude>
+					<!-- 排除过滤配置文件 -->
+					<exclude>**/config-env*.properties</exclude>
 				</excludes>
 				<filtering>true</filtering>
 			</resource>
@@ -123,6 +93,8 @@
 			<build>
 				<filters>
 					<filter>src/main/resources/config-env-dev.properties</filter>
+					<filter>src/main/resources/core-filters/config-env-dev.properties</filter>
+					<!-- 可以有多个，格式 config-env-dev.properties -->
 				</filters>
 			</build>
 
@@ -132,6 +104,8 @@
 			<build>
 				<filters>
 					<filter>src/main/resources/config-env-test.properties</filter>
+					<filter>src/main/resources/core-filters/config-env-test.properties</filter>
+					<!-- 可以有多个，格式 config-env-test.properties -->
 				</filters>
 			</build>
 		</profile>
@@ -140,6 +114,8 @@
 			<build>
 				<filters>
 					<filter>src/main/resources/config-env-product.properties</filter>
+					<filter>src/main/resources/core-filters/config-env-product.properties</filter>
+					<!-- 可以有多个，格式 config-env-product.properties -->
 				</filters>
 			</build>
 		</profile>
