--- a/study-web/web-config/pom.xml
+++ b/study-web/web-config/pom.xml
@@ -15,10 +15,18 @@
 	<url>http://maven.apache.org</url>
 
 	<dependencies>
+	
+		<!-- 服务监控 -->
+		<dependency>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+		
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-config-server</artifactId>
 		</dependency>
+		
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-eureka</artifactId>
@@ -32,18 +40,19 @@
 			<resource>
 				<directory>src/main/resources</directory>
 				<excludes>
-					<exclude>config-env*.properties</exclude>
+					<exclude>**/config-env*.properties</exclude>
 				</excludes>
 			</resource>
 			<!-- 设置对auto-config.properties，jdbc.properties进行过虑，即这些文件中的${key}会被替换掉为真正的值 -->
 			<resource>
 				<directory>src/main/resources</directory>
 				<includes>
-					<include>*.properties</include>
-					<include>*.xml</include>
+					<include>**/*.properties</include>
+					<include>**/*.xml</include>
 				</includes>
 				<excludes>
-					<exclude>config-env*.properties</exclude>
+					<!-- 排除过滤配置文件 -->
+					<exclude>**/config-env*.properties</exclude>
 				</excludes>
 				<filtering>true</filtering>
 			</resource>
@@ -69,7 +78,8 @@
 			</activation>
 			<build>
 				<filters>
-					<filter>src/main/resources/config-env-dev.properties</filter>
+					<filter>src/main/resources/core-filters/config-env-dev.properties</filter>
+					<!-- 可以有多个，格式 config-env-dev.properties -->
 				</filters>
 			</build>
 
@@ -78,7 +88,8 @@
 			<id>test</id>
 			<build>
 				<filters>
-					<filter>src/main/resources/config-env-test.properties</filter>
+					<filter>src/main/resources/core-filters/config-env-test.properties</filter>
+					<!-- 可以有多个，格式 config-env-test.properties -->
 				</filters>
 			</build>
 		</profile>
@@ -86,7 +97,8 @@
 			<id>product</id>
 			<build>
 				<filters>
-					<filter>src/main/resources/config-env-product.properties</filter>
+					<filter>src/main/resources/core-filters/config-env-product.properties</filter>
+					<!-- 可以有多个，格式 config-env-product.properties -->
 				</filters>
 			</build>
 		</profile>
