--- a/study-web/web-eureka/src/main/resources/application.properties
+++ b/study-web/web-eureka/src/main/resources/application.properties
@@ -4,7 +4,14 @@ server.port=18000
 
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
+
 eureka.client.serviceUrl.defaultZone=http://localhost:${server.port}/eureka/
+
+
+# 续期时间，即扫描失效服务的间隔时间（缺省为60*1000ms）
+#eureka.server.eviction-interval-timer-in-ms=5000
+# 关闭自我保护模式（缺省为打开）
+#eureka.server.enable-self-preservation=false 
 
 
 
