--- a/study-web/web-template/web-template-api/src/main/resources/bootstrap.properties
+++ b/study-web/web-template/web-template-api/src/main/resources/bootstrap.properties
@@ -1,23 +1,28 @@
-#本地属性文件
-spring.config.name=application,druid
+#本地属性文件（多个用英文逗号隔开）
+spring.config.name=application
 
 
 #远程属性配置
 #服务中心的地址（不灵活）
 #spring.cloud.config.uri=http://localhost:18002/
-#注册中心地址（集群逗号隔开）
-eureka.client.serviceUrl.defaultZone=http://localhost:18000/eureka/
+#注册中心地址（多个用英文逗号隔开）
+eureka.client.serviceUrl.defaultZone=@eureka.client.serviceUrl.defaultZone@
 #开启配置服务发现
 spring.cloud.config.discovery.enabled=true
 #配置服务实例名称
-spring.cloud.config.discovery.service-id=config-server
-
-#对应前配置文件中的{application}部分
-spring.application.name=api-template
-#对应前配置文件中的{profile}部分
-spring.cloud.config.profile=dev
+spring.cloud.config.discovery.service-id=cloud-server
+#失败时能够快速响应
+spring.cloud.config.fail-fast=true
+#远程配置文件名称（多个用英文逗号隔开）
+spring.cloud.config.name=template,druid
+#对应前配置文件中的{profile}部分（多个用英文逗号隔开），同时会默认加载没有后缀同名的配置文件
+spring.cloud.config.profile=core
 #对应前配置文件的git分支，也可以是本地文件夹
-spring.cloud.config.label=core
+spring.cloud.config.label=core-master
+#用户名
+spring.cloud.config.username=shangyong
+#密码
+spring.cloud.config.password=loan
 
 
 
