--- a/study-web/web-template/web-template-api/src/main/resources/config-env-test.properties
+++ b/study-web/web-template/web-template-api/src/main/resources/config-env-test.properties
@@ -1,15 +1,2 @@
-spring.profiles.active=test
-
-#
-eureka.client.serviceUrl.defaultZone=http://localhost:18000/eureka/
-eureka.instance.leaseRenewalIntervalInSeconds=5
-
-#数据源配置
-spring.datasource.url=
-spring.datasource.username=
-spring.datasource.password=
-spring.datasource.driver-class-name=
-
-#druid数据源后台监控登录查看
-druid.login.username=
-druid.login.password=
+#注册中心地址
+eureka.client.serviceUrl.defaultZone=
