maven springboot 打包依赖（pom文件parent不是spring boot的情况下）

--- a/study-web/web-template/web-template-api/pom.xml
+++ b/study-web/web-template/web-template-api/pom.xml
@@ -109,6 +109,14 @@
 				<configuration>
 					<executable>true</executable>
 				</configuration>
+				<!-- 如果不直接继承spring的parent，需要加 -->
+				<executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>
 			</plugin>
 		</plugins>
 	</build>
