--- a/study-web/web-cloud/src/main/resources/application.properties
+++ b/study-web/web-cloud/src/main/resources/application.properties
@@ -11,6 +11,9 @@ eureka.cluster.uri=127.0.0.1:18000
 #注册中心地址
 eureka.client.serviceUrl.defaultZone=http://${security.user.name}:${security.user.password}@${eureka.cluster.uri}/eureka/
 
+#配置中心
+#指定配置前缀（务必要指定，不然使用默认的eureka同注册中心冲突）
+spring.cloud.config.server.prefix=config
 # 心跳时间，即服务续约间隔时间（缺省为30s）
 eureka.instance.lease-renewal-interval-in-seconds=30
 # 发呆时间，即服务续约到期时间（缺省为90s）
