--- a/study-web/web-gateway/pom.xml
+++ b/study-web/web-gateway/pom.xml
@@ -21,6 +21,12 @@
 			<artifactId>spring-cloud-starter-eureka</artifactId>
 		</dependency>
 		
+		<!-- 配置中心 -->
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-config</artifactId>
+		</dependency>
+		
 		<!-- 服务网关 -->
 		<dependency>
 		    <groupId>org.springframework.cloud</groupId>
