--- a/study-web/web-template/web-template-consumer/pom.xml
+++ b/study-web/web-template/web-template-consumer/pom.xml
@@ -15,13 +15,21 @@
 	<url>http://maven.apache.org</url>
 
 	<dependencies>
+		<!-- 远程调用客户端 ，包含熔断-->
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-feign</artifactId>
 		</dependency>
+		<!-- 服务注册发现客户端 -->
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-eureka</artifactId>
+		</dependency>
+		
+		<!-- 配置中心 -->
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-config</artifactId>
 		</dependency>
 
 		<dependency>
