spring cloud 网关

--- a/study-web-2.0/web-gateway-2.0/src/main/resources/application.properties
+++ b/study-web-2.0/web-gateway-2.0/src/main/resources/application.properties
@@ -13,41 +13,42 @@ eureka.instance.prefer-ip-address=true
 #注册中心地址（多个用英文逗号隔开）
 eureka.client.serviceUrl.defaultZone=@eureka.client.serviceUrl.defaultZone@
 
-#gateway配置 eureka 服务自动发现
-spring.cloud.gateway.discovery.locator.enabled=true
+#不使用
+##gateway配置 eureka 服务自动发现
+#spring.cloud.gateway.discovery.locator.enabled=true
+##大小写兼容 
+#spring.cloud.gateway.discovery.locator.lowerCaseServiceId=true
 
-#大小写兼容 
-spring.cloud.gateway.discovery.locator.lowerCaseServiceId=true
 
 #详情可调试 NettyRoutingFilter.filter
-#访问地址 /api-user/userCenter 或者 /userCenter
 spring.cloud.gateway.routes[0].id=userRoute
 spring.cloud.gateway.routes[0].uri=lb://api-user
 spring.cloud.gateway.routes[0].predicates[0]=Path=/userCenter/**
-#过滤器
-spring.cloud.gateway.routes[0].filters[0].name=RequestRateLimiter
-#超出后 返回 429 Too Many Requests
-#允许用户每秒处理多少个请求
-spring.cloud.gateway.routes[0].filters[0].args.redis-rate-limiter.replenishRate=1000
-#令牌桶的容量，允许在一秒钟内完成的最大请求数
-spring.cloud.gateway.routes[0].filters[0].args.redis-rate-limiter.burstCapacity=1200
-#使用SpEL按名称引用bean
-spring.cloud.gateway.routes[0].filters[0].args.key-resolver=#{@ipKeyResolver}
 
+spring.cloud.gateway.routes[0].filters[0].name=Hystrix
+spring.cloud.gateway.routes[0].filters[0].args.name=fallbackcmd
+spring.cloud.gateway.routes[0].filters[0].args.fallbackUri=forward:/fallback
 
-#是否带前缀
-#spring.cloud.gateway.routes[0].filters[0]=StripPrefix=1
-#拼接到Path前面
-#spring.cloud.gateway.routes[0].filters[0]=PrefixPath=/
-
-
+spring.cloud.gateway.routes[0].filters[1].name=Authorize
+spring.cloud.gateway.routes[0].filters[1].args.tokenHeader=XAccessToken
+spring.cloud.gateway.routes[0].filters[1].args.tokenKeyPrefix=COMMON:CACHE:TOKEN:
 #cors
-#spring.cloud.gateway.globalcors.corsConfigurations.[/**].allowedOrigins=*
-#spring.cloud.gateway.globalcors.corsConfigurations.[/**].allowedMethods=GET,POST,PUT,DELETE,OPTIONS
-#
-#feign.hystrix.enabled=true
-#hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=3000
+spring.cloud.gateway.globalcors.corsConfigurations.[/**].allowedOrigins=*
+spring.cloud.gateway.globalcors.corsConfigurations.[/**].allowedMethods=GET,POST,PUT,DELETE,OPTIONS
 
-#spring.cloud.gateway.routes[0].filters[0]=RequestRateLimiter=2, 2, #{@userkeyresolver}
+#因为是网关，需要高并发
+#资源隔离策略 THREAD或者SEMAPHORE，一种是基于线程池，一种是信号量
+hystrix.command.default.execution.isolation.strategy=SEMAPHORE
+#设置调用者等待命令执行的超时限制，超过此时间，HystrixCommand被标记为TIMEOUT，并执行回退逻辑
+hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=3000
+#达到最大并发数时，后续请求会被拒绝 信号量应该是容器（比如Tomcat）线程池一小部分，不能等于或者略小于容器线程池大小，否则起不到保护作用
+hystrix.command.default.execution.isolation.semaphore.maxConcurrentRequests=2500
+
+#监控熔断信息 
+management.endpoints.web.exposure.include=hystrix.stream
 
 
+#logging.level.org.springframework.cloud.gateway=TRACE
+#logging.level.org.springframework.http.server.reactive=DEBUG
+#logging.level.org.springframework.web.reactive=DEBUG
+#logging.level.reactor.ipc.netty=DEBUG
