--- a/study-web-2.0/web-gateway-2.0/src/main/resources/application.properties
+++ b/study-web-2.0/web-gateway-2.0/src/main/resources/application.properties
@@ -25,13 +25,25 @@ spring.cloud.gateway.routes[0].id=userRoute
 spring.cloud.gateway.routes[0].uri=lb://api-user
 spring.cloud.gateway.routes[0].predicates[0]=Path=/userCenter/**
 
+##RequestRateLimiterGatewayFilterFactory
+#spring.cloud.gateway.routes[0].filters[0].name=RequestRateLimiter
+##允许用户每秒处理多少个请求
+#spring.cloud.gateway.routes[0].filters[0].args.redis-rate-limiter.replenishRate=3000
+##令牌桶的容量，允许在一秒钟内完成的最大请求数
+#spring.cloud.gateway.routes[0].filters[0].args.redis-rate-limiter.burstCapacity=3500
+##使用SpEL按名称引用bean
+#spring.cloud.gateway.routes[0].filters[0].args.key-resolver=#{@ipKeyResolver}
+
+#HystrixGatewayFilterFactory
 spring.cloud.gateway.routes[0].filters[0].name=Hystrix
 spring.cloud.gateway.routes[0].filters[0].args.name=fallbackcmd
 spring.cloud.gateway.routes[0].filters[0].args.fallbackUri=forward:/fallback
 
+#AuthorizeGatewayFilterFactory
 spring.cloud.gateway.routes[0].filters[1].name=Authorize
 spring.cloud.gateway.routes[0].filters[1].args.tokenHeader=XAccessToken
 spring.cloud.gateway.routes[0].filters[1].args.tokenKeyPrefix=COMMON:CACHE:TOKEN:
+
 #cors
 spring.cloud.gateway.globalcors.corsConfigurations.[/**].allowedOrigins=*
 spring.cloud.gateway.globalcors.corsConfigurations.[/**].allowedMethods=GET,POST,PUT,DELETE,OPTIONS
