--- a/study-web/web-cloud/src/main/resources/core-master/druid.properties
+++ b/study-web/web-cloud/src/main/resources/core-master/druid.properties
@@ -2,7 +2,7 @@
 spring.datasource.url=@spring.datasource.url@
 spring.datasource.username=@spring.datasource.username@
 spring.datasource.password=@spring.datasource.password@
-spring.datasource.driver-class-name=com.alibaba.druid.pool.DruidDataSource
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 
 #阿里druid配置
