--- a/study-web/web-template/pom.xml
+++ b/study-web/web-template/pom.xml
@@ -37,6 +37,14 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-cache</artifactId>
 		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/org.springframework.statemachine/spring-statemachine-core -->
+		<dependency>
+		    <groupId>org.springframework.statemachine</groupId>
+		    <artifactId>spring-statemachine-core</artifactId>
+		    <version>1.2.12.RELEASE</version>
+		</dependency>
+				
 
 		<!-- 公共jar -->
 		<dependency>
