修改监控模块

--- a/study-web-2.0/web-admin-2.0/src/main/resources/application.properties
+++ b/study-web-2.0/web-admin-2.0/src/main/resources/application.properties
@@ -1,14 +1,19 @@
-#management:
-#  endpoints:
-#    web:
-#      exposure:
-#        include: "*"
-#  endpoint:
-#    health:
-#      show-details: ALWAYS
-#spring:
-#  security:
-#    user:
-#    	
-#      name: "user"
-#      password: "password"
+#环境配置
+spring.profiles.active=@spring.profiles.active@
+spring.application.name=admin-server
+
+server.port=16000
+
+eureka.instance.leaseRenewalIntervalInSeconds=10
+eureka.instance.metadata-map.startup=${random.int}
+
+eureka.client.registryFetchIntervalSeconds=5
+eureka.client.serviceUrl.defaultZone=@eureka.client.serviceUrl.defaultZone@
+
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=ALWAYS
+
+spring.boot.admin.notify.custom.ignoreChanges=UNKNOWN:UNKNOWN
+
+
+
