--- a/study-web/web-admin/src/main/resources/application.properties
+++ b/study-web/web-admin/src/main/resources/application.properties
@@ -1,18 +1,16 @@
-##注册中心
-#spring.application.name=admin-server
-#server.port=16000
-##
-##eureka.client.register-with-eureka=false
-##eureka.client.fetch-registry=false
-##
-##eureka.client.serviceUrl.defaultZone=http://localhost:${server.port}/eureka/
-#
-#
-## 续期时间，即扫描失效服务的间隔时间（缺省为60*1000ms）
-##eureka.server.eviction-interval-timer-in-ms=5000
-## 关闭自我保护模式（缺省为打开）
-##eureka.server.enable-self-preservation=false 
-#
-#
-#
-#
+#环境配置
+spring.profiles.active=@spring.profiles.active@
+spring.application.name=admin-server
+
+server.port=16000
+
+
+eureka.instance.leaseRenewalIntervalInSeconds=10
+eureka.instance.metadata-map.startup=${random.int}
+
+eureka.client.registryFetchIntervalSeconds=5
+eureka.client.serviceUrl.defaultZone=@eureka.client.serviceUrl.defaultZone@
+
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=ALWAYS
+
