--- a/study-web/web-admin/src/main/resources/config-env-dev.properties
+++ b/study-web/web-admin/src/main/resources/config-env-dev.properties
@@ -1,2 +1,2 @@
 spring.profiles.active=dev
-
+eureka.client.serviceUrl.defaultZone=http://shangyong:loan@192.168.1.252:18000/eureka/,http://shangyong:loan@192.168.1.252:18001/eureka/
