--- a/study-web-2.0/web-admin-2.0/pom.xml
+++ b/study-web-2.0/web-admin-2.0/pom.xml
@@ -19,17 +19,10 @@
 
 	<dependencies>
 
-		<!-- https://mvnrepository.com/artifact/de.codecentric/spring-boot-admin-server -->
 		<dependency>
 			<groupId>de.codecentric</groupId>
-			<artifactId>spring-boot-admin-server</artifactId>
-			<version>2.0.2</version>
-		</dependency>
-		
-		<dependency>
-			<groupId>de.codecentric</groupId>
-			<artifactId>spring-boot-admin-server-ui</artifactId>
-			<version>2.0.2</version>
+			<artifactId>spring-boot-admin-starter-server</artifactId>
+			<version>2.0.4</version>
 		</dependency>
 
 		<dependency>
@@ -38,9 +31,21 @@
 		</dependency>
 
 		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+		</dependency>
+
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
+
+		<!-- 发送邮件 -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
+
 	</dependencies>
 
 	<build>
