--- a/study-spring/pom.xml
+++ b/study-spring/pom.xml
@@ -5,7 +5,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.study.demo</groupId>
-	<artifactId>study-demo</artifactId>
+	<artifactId>study-spring</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
@@ -22,11 +22,11 @@
 	</properties>
 
 	<dependencies>
+
 	</dependencies>
 
 	<build>
 		<plugins>
-
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
@@ -47,12 +47,10 @@
 	</build>
 
 	<modules>
-		<module>study-web</module>
-		<module>study-web-2.0</module>
-		<module>study-core</module>
-		<module>study-spring</module>
+		<!-- cloud-stream 学习 -->
+		<module>study-spring-cloud-stream</module>
 		
+
+
 	</modules>
 </project>
-
-
